# Old_Bailey_MCP_v2

./: .env.example  .gitignore  BouchGuide.md  README.md  claude.md  main.py  pyproject.toml  server.py
docs/superpowers/plans/: 2026-04-09-old-bailey-mcp-v2.md
docs/superpowers/specs/: 2026-04-09-old-bailey-mcp-v2-design.md
tests/: conftest.py  test_gedcom.py  test_knowledge.py  test_query.py  test_smoke.py  test_tools.py  test_utils.py
